--- a/waybar/config
+++ b/waybar/config
@@ -17,9 +17,13 @@
     ],
     "modules-right": [
         "tray",
+        "custom/sep",
         "custom/bluetooth",
+        "custom/sep",
         "pulseaudio",
+        "custom/sep",
         "custom/powerprofile",
+        "custom/sep",
         "battery"
     ],
 
@@ -111,6 +115,12 @@
         "on-scroll-up": "bash ~/.config/scripts/bluetooth-status.sh scroll-up",
         "on-scroll-down": "bash ~/.config/scripts/bluetooth-status.sh scroll-down",
         "on-click": "flatpak run io.github.ebonjaeger.bluejay"
+    },
+
+    "custom/sep": {
+        "format": "│",
+        "interval": "once",
+        "tooltip": false
     },
 
     "custom/hypridle": {
