Add color states to battery indicator
- Green when charging or plugged in
- Yellow when discharging
- Red when below 20%

--- a/waybar/config
+++ b/waybar/config
@@ -91,6 +91,9 @@
         "format-alt": "{icon} {time} left",
         "format-icons": ["󰂎", "󰁺", "󰁾", "󰂀", "󰁹"],
         "interval": 30,
+        "states": {
+            "critical": 20
+        },
         "on-scroll-up": "swayosd-client --brightness raise",
         "on-scroll-down": "swayosd-client --brightness lower"
     },
