Add battery low notification daemon
- Warns at 20% with normal notification
- Critical notification at 10%
- Resets when charging resumes
- Added to autostart and restart script

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -30,6 +30,7 @@ exec-once = hypridle
 exec-once = swaync
 exec-once = swayosd-server
 exec-once = bash /home/ghost/.config/scripts/swayosd-monitor.sh
+exec-once = bash /home/ghost/.config/scripts/battery-notify.sh
 exec-once = clipse -listen
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
