--- a/waybar/config
+++ b/waybar/config
@@ -7,6 +7,7 @@
     "margin-right": 12,
     "modules-left": [
         "custom/ppmenu",
+        "custom/sep",
         "hyprland/workspaces",
         "hyprland/window"
     ],
@@ -27,7 +28,7 @@
         "battery"
     ],
     "custom/ppmenu": {
-        "format": "",
+        "format": "b",
         "tooltip": "Open app menu",
         "tooltip-format": "Open app menu",
         "on-click": "wofi --show drun -s /home/ghost/.config/wofi/style.css"
