Fix notifications module with subscribe-waybar and proper icons
- Use --subscribe-waybar for real-time updates
- Show different icons: bell with dot when unread, DND icon when silenced
- Left click toggles panel, right click toggles DND
- Remove -C flag that was closing all notifications immediately

--- a/waybar/config
+++ b/waybar/config
@@ -106,9 +106,23 @@
         "spacing": 10
     },
     "custom/notifications": {
-        "format": "󰂚",
-        "tooltip": "Show notifications",
-        "on-click": "swaync-client -t -sw -C"
+        "format": "{icon}",
+        "format-icons": {
+            "notification": "󰂞",
+            "none": "󰂚",
+            "dnd-notification": "󰂛",
+            "dnd-none": "󰂛",
+            "inhibited-notification": "󰂞",
+            "inhibited-none": "󰂚",
+            "dnd-inhibited-notification": "󰂛",
+            "dnd-inhibited-none": "󰂛"
+        },
+        "return-type": "json",
+        "exec-if": "which swaync-client",
+        "exec": "swaync-client --subscribe-waybar",
+        "on-click": "swaync-client --toggle-panel --skip-wait",
+        "on-click-right": "swaync-client --toggle-dnd --skip-wait",
+        "escape": true
     },
     "custom/bluetooth": {
         "format": "{}",
