Switch lockscreen from hyprlock to gtklock
- Replace $lockscreen variable in hyprland.conf and keys.conf
- Update hypridle lock_cmd to use gtklock
- hyprlock.conf preserved intact for easy rollback

--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,8 +1,8 @@
 # Hypridle configuration - improved for clarity, maintainability, and efficiency
 
 general {
-    # Prevent multiple hyprlock instances
-    lock_cmd = pidof hyprlock || hyprlock
+    # Prevent multiple gtklock instances
+    lock_cmd = pidof gtklock || gtklock
 
     # Lock before suspend
     before_sleep_cmd = loginctl lock-session
