Add gtklock config with stone theme
- config.ini: userinfo + playerctl modules, Dark_Nature wallpaper
- style.css: matches waybar/swaync Tailwind stone palette
- Symlinked ~/.config/gtklock to dots repo
- Update all gtklock calls to use config file

--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -2,7 +2,7 @@
 
 general {
     # Prevent multiple gtklock instances
-    lock_cmd = pidof gtklock || gtklock
+    lock_cmd = pidof gtklock || gtklock -c /home/ghost/.config/gtklock/config.ini
 
     # Lock before suspend
     before_sleep_cmd = loginctl lock-session
