--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,7 +12,7 @@ $browser       = firefox
 $clipboard     = clipse -e clipse
 $colorpicker   = hyprpicker -a
 $mainMod       = SUPER
-$lockscreen    = gtklock
+$lockscreen    = gtklock -c /home/ghost/.config/gtklock/config.ini
 $notification  = swaync-client -t -sw
 $screenshot    = grim -g "$(slurp -d)" - | wl-copy
 $screenshotocr = bash /home/ghost/.config/scripts/screenshot-ocr.sh
