--- a/hypr/modules/keys.conf
+++ b/hypr/modules/keys.conf
@@ -6,7 +6,7 @@ $browser       = firefox
 $menu          = wofi --show drun
 $clipboard     = cliphist list | wofi --dmenu | cliphist decode | wl-copy
 $colorpicker   = hyprpicker -a
-$lockscreen    = gtklock
+$lockscreen    = gtklock -c /home/ghost/.config/gtklock/config.ini
 $notification  = swaync-client -t -sw
 $screenshot    = grim -g "$(slurp -d)" - | wl-copy
 $shutdown      = wlogout
