Add wayvnc remote access, vicinae launcher, waybar bluetooth colors
- Add wayvnc config, toggle script, Super+Shift+V keybind, waybar orange
  indicator (hidden when inactive, click to stop), restart.sh cleanup block
- Switch launcher from wofi to vicinae: exec-once server, Super+R and
  Super+Space toggle, waybar ppmenu button updated (wofi configs kept)
- Waybar bluetooth indicator: blue when connected, gray when disconnected

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -7,7 +7,7 @@ monitor = , preferred, auto, 1
 ### PROGRAM SHORTCUTS ###
 $terminal      = kitty
 $fileManager   = nautilus
-$menu          = wofi --show drun -s /home/ghost/.config/wofi/style.css
+$menu          = vicinae toggle
 $browser       = firefox
 $clipboard     = clipse -e clipse
 $colorpicker   = hyprpicker -a
@@ -39,7 +39,7 @@ exec-once = nm-applet
 exec-once = nmcli radio wifi on
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = bash /home/ghost/.config/scripts/wallpaper.sh
-exec-once = wofi --show drun -s /home/ghost/.config/wofi/style.css
+exec-once = vicinae server
 exec-once = hyprctl keyword monitor "FALLBACK,1920x1080@60,auto,1"
 
 
@@ -190,6 +190,7 @@ bind = $mainMod, L, exec, $lockscreen
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, G, togglefloating,
 bind = $mainMod, R, exec, $menu
+bind = $mainMod, Space, exec, vicinae toggle
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
 bind = $mainMod, N, exec, $notification,
@@ -208,6 +209,7 @@ bind = $mainMod, B, exec, $externalscript1
 #bind = $mainMod, grave, hyprexpo:expo, toggle
 
 # utility
+bind = $mainMod SHIFT, V, exec, bash /home/ghost/.config/scripts/wayvnc-toggle.sh
 bind = $mainMod SHIFT, M, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media start
 bind = $mainMod SHIFT, K, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media stop
 # bind = $mainMod SHIFT, K, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py net bluetooth 2  # Disabled - duplicate keybinding
