--- a/hypr/modules/keys.conf
+++ b/hypr/modules/keys.conf
@@ -34,6 +34,7 @@ bind = $mainMod, B, exec, $externalscript1
 bind = $mainMod SHIFT, E, exec, $shutdown
 
 # utility
+bind = $mainMod SHIFT, V, exec, bash /home/ghost/.config/scripts/wayvnc-toggle.sh
 bind = $mainMod SHIFT, M, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media start
 bind = $mainMod SHIFT, K, exec, bash -c "pkill mpv"
 bind = $mainMod SHIFT, B, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py net bluetooth 2
