Remove wofi and hyprlock, fix Nautilus GTK theme
- Delete wofi/ config and style (replaced by vicinae)
- Delete hypr/hyprlock.conf (replaced by gtklock)
- Update $menu and $clipboard vars in keys.conf to use vicinae/clipse
- Uncomment and fix gsettings gtk-theme call to enforce Adwaita
- Remove wofi and hyprlock from deps in README, setup.sh, and manager scripts

--- a/hypr/modules/autostart.conf
+++ b/hypr/modules/autostart.conf
@@ -10,10 +10,9 @@ exec-once = nm-applet
 exec-once = nmcli radio wifi on
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = bash /home/ghost/.config/scripts/wallpaper.sh
-#exec-once = wofi --show drun -s /home/ghost/.config/wofi/style.css
 exec-once = hyprctl keyword monitor "FALLBACK,1920x1080@60,auto,1"
 exec-once = dbus-update-activation-environment --systemd --all
-#exec = gsettings set org.gnome.desktop.interface gtk-theme "YOUR_DARK_GTK3_THEME"   # for GTK3 apps
-exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
+exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita"
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 
 env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
