--- a/hypr/modules/keys.conf
+++ b/hypr/modules/keys.conf
@@ -3,8 +3,8 @@ $mainMod       = SUPER
 $terminal      = kitty
 $fileManager   = nautilus
 $browser       = firefox
-$menu          = wofi --show drun
-$clipboard     = cliphist list | wofi --dmenu | cliphist decode | wl-copy
+$menu          = vicinae toggle
+$clipboard     = kitty --class clipse -e clipse
 $colorpicker   = hyprpicker -a
 $lockscreen    = gtklock -c /home/ghost/.config/gtklock/config.ini
 $notification  = swaync-client -t -sw
