--- a/hypr/modules/autostart.conf
+++ b/hypr/modules/autostart.conf
@@ -1,18 +1,3 @@
-exec-once = eval $(/usr/bin/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh) && export SSH_AUTH_SOCK
-exec-once = hyprpaper
-exec-once = hypridle
-exec-once = swaync
-#exec-once = swayosd-server
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
-exec-once = bash /home/ghost/Documents/dots/scripts/clipsync.sh
-exec-once = nm-applet
-exec-once = nmcli radio wifi on
-exec-once = systemctl --user start hyprpolkitagent
-exec-once = bash /home/ghost/.config/scripts/wallpaper.sh
-exec-once = hyprctl keyword monitor "FALLBACK,1920x1080@60,auto,1"
-exec-once = dbus-update-activation-environment --systemd --all
-exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita"
-exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+env = QT_QPA_PLATFORMTHEME,qt6ct
+exec-once = bash /home/ghost/.config/scripts/restart.sh
 
-env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
